# Robotica-Reto-2

./: .gitignore  PROXIMOS_PASOS_RC2.md  package.xml  setup.py
capytown_esan/: cam_pub.py  camera_stream.py  hsv_tuner.py  lane_controller.py  lane_detector.py
config/: hsv_params.yaml  pid_params.yaml
launch/: lane_following.launch.py
scripts/: lane_report.py  lane_visualization.py  plot_lane_error.py  plot_trajectory.py
